--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"cross-env": "^7.0.3",
 		"eslint": "^7.28.0",
 		"eslint-config-prettier": "^8.3.0",
+		"ethereum-waffle": "^3.4.4",
 		"ethers": "^5.6.5",
 		"hardhat": "^2.3.3",
 		"hardhat-deploy": "^0.11.10",
